--- a/ngrx-forum-app/src/app/modules/shop/shop-page/shop.page.html
+++ b/ngrx-forum-app/src/app/modules/shop/shop-page/shop.page.html
@@ -1,1 +1,18 @@
-<div>This is the shop page</div>
+<table>
+  <thead>
+    <tr>
+      <th>Item Name</th>
+      <th>Item Cost</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of shoppingItems">
+      <td>{{ item.itemName }}</td>
+      <td>R {{ item.itemCost.toFixed(2) }}</td>
+      <td>
+        <button (click)="addToCart(item)">Add to Cart</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
