--- a/ngrx-forum-app/src/app/modules/cart/cart-page/cart.page.html
+++ b/ngrx-forum-app/src/app/modules/cart/cart-page/cart.page.html
@@ -9,7 +9,7 @@
   <tbody>
     <tr *ngFor="let item of cartItems$ | async">
       <td>{{ item.itemName }}</td>
-      <td>\${{ item.itemCost.toFixed(2) }}</td>
+      <td>R {{ item.itemCost.toFixed(2) }}</td>
       <td>
         <button (click)="removeCartItem(item.itemId)">Remove</button>
       </td>
