Enlarge icon and its related account

--- a/ngrx-forum-app/src/app/modules/shared/components/nav-bar/nav-bar.component.html
+++ b/ngrx-forum-app/src/app/modules/shared/components/nav-bar/nav-bar.component.html
@@ -9,11 +9,12 @@
   </ul>
   <div class="placeholder">
     <div class="cart-count">
-      <span>{{ cartItemCount$ | async }}</span>
+      <span class="count">{{ cartItemCount$ | async }}</span>
       <mat-icon
         aria-hidden="false"
         aria-label="Example home icon"
         fontIcon="shopping_cart"
+        class="icon"
       ></mat-icon>
     </div>
   </div>
