Add all files for the base of NgRx

--- a/ngrx-forum-app/src/app/modules/shared/components/nav-bar/nav-bar.component.html
+++ b/ngrx-forum-app/src/app/modules/shared/components/nav-bar/nav-bar.component.html
@@ -6,6 +6,9 @@
     <li (click)="onNavigate(navigationOption.Cart)">
       <a>Cart</a>
     </li>
+    <li (click)="onNavigate(navigationOption.User)">
+      <a>User</a>
+    </li>
   </ul>
   <div class="placeholder">
     <div class="cart-count">
