--- a/ngrx-forum-app/src/app/modules/user/pages/user/user.page.html
+++ b/ngrx-forum-app/src/app/modules/user/pages/user/user.page.html
@@ -7,7 +7,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let user of systemUsers$ | async">
+    <tr *ngFor="let user of signalUsers()">
       <td>{{ user.userId }}</td>
       <td>{{ user.userName }}</td>
       <td>{{ user.userEmail }}</td>
