--- a/ngrx-forum-app/src/app/modules/user/pages/user/user.page.scss
+++ b/ngrx-forum-app/src/app/modules/user/pages/user/user.page.scss
@@ -1,14 +1,74 @@
 table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 2rem;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.edit-user {
+  margin-top: 2rem;
+}
+
+.edit-user {
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+}
+
+.edit-user form {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-user div {
+  margin-bottom: 15px;
+}
+
+.edit-user label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.edit-user input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.edit-user button {
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.edit-user button[type="submit"] {
+  background-color: #28a745;
+  color: white;
+}
+
+.edit-user button[type="button"] {
+  background-color: #dc3545;
+  color: white;
+}
+
+.edit-user button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
